--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 amqp==5.2.0
+annotated-types==0.6.0
+anyio==4.2.0
+asttokens==2.4.1
 attrs==23.2.0
 Automat==22.10.0
 billiard==4.2.0
+blessed==1.20.0
 blinker==1.7.0
+bpython==0.24
 celery==5.3.6
 certifi==2023.11.17
 cffi==1.16.0
@@ -14,31 +19,54 @@ click-repl==0.3.0
 constantly==23.10.4
 cryptography==41.0.7
 cssselect==1.2.0
+curtsies==0.4.2
+cwcwidth==0.1.9
+decorator==5.1.1
+distro==1.9.0
+executing==2.0.1
 filelock==3.13.1
 Flask==3.0.0
+Flask-Cors==4.0.0
 google-search-results==2.4.2
+greenlet==3.0.3
+gunicorn==21.2.0
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.26.0
 hyperlink==21.0.0
 idna==3.6
 incremental==22.10.0
+ipython==8.20.0
 itemadapter==0.8.0
 itemloaders==1.1.0
 itsdangerous==2.1.2
+jedi==0.19.1
 Jinja2==3.1.3
 jmespath==1.0.1
 kombu==5.3.5
 lxml==5.1.0
 MarkupSafe==2.1.3
+matplotlib-inline==0.1.6
+openai==1.8.0
 packaging==23.2
 parsel==1.8.1
+parso==0.8.3
+pexpect==4.9.0
 prompt-toolkit==3.0.43
 Protego==0.3.0
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.21
+pydantic==2.5.3
+pydantic_core==2.14.6
 PyDispatcher==2.0.7
+Pygments==2.17.2
 pyOpenSSL==23.3.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+pyxdg==0.28
 queuelib==1.6.2
 redis==5.0.1
 requests==2.31.0
@@ -46,7 +74,11 @@ requests-file==1.5.1
 Scrapy==2.11.0
 service-identity==24.1.0
 six==1.16.0
+sniffio==1.3.0
+stack-data==0.6.3
 tldextract==5.1.1
+tqdm==4.66.1
+traitlets==5.14.1
 Twisted==22.10.0
 typing_extensions==4.9.0
 tzdata==2023.4
